Ensure strange urls don't resolve to empty filenames to prevent confusion when resolving duplicates later. b=206319 r=brade sr=jaggernaut a=dbaron